--- a/4_Statistics/Week3/homework_week3.ipynb
+++ b/4_Statistics/Week3/homework_week3.ipynb
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
        "ionosphere               0.882   0.888    0.886      0.898"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
        "       [0.        , 0.        , 0.        , 0.        ]])"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
        "4"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +874,7 @@
     }
    ],
    "source": [
-    "#5\n",
+    "#6\n",
     "multipletests(matrix[np.where(matrix > 0)], alpha = 0.05, method = 'fdr_bh')"
    ]
   },
@@ -890,7 +890,7 @@
     "#4 m\n",
     "#5 0\n",
     "#6 3\n",
-    "#7 корректно\n",
+    "#7 некорректно\n",
     "#8 больше датасетов"
    ]
   },
@@ -1589,7 +1589,8 @@
     "fitted = m4.fit(cov_type='HC1')\n",
     "F, p, k1 = m3.fit().compare_f_test(m4.fit())\n",
     "print(f'F = {F}, p = {p}, k1 = {k1}')\n",
-    "#p-val оч мало, признаки надо вернуть, то есть финальная модель похоже, что m3"
+    "#p-val оч мало, признаки надо вернуть, то есть финальная модель похоже, что m3\n",
+    "#в 10 задаче ответы выбирал по m3 - все ок"
    ]
   },
   {
