--- a/4_Statistics/Week2/homework_week2.ipynb
+++ b/4_Statistics/Week2/homework_week2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "0.026856695507523787"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "1   0.21   59.8   61.0    326  3.89  3.84  2.31"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,9 +158,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Barnett/anaconda3/lib/python3.6/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "lin_mod = LinearRegression()\n",
     "lin_mod.fit(X_train, y_train)\n",
@@ -173,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +191,7 @@
        "(890.3764004285592, 802.9205172724115)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +222,7 @@
        "Ttest_relResult(statistic=13.017729783878393, pvalue=1.655174575144972e-38)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,25 +279,25 @@
     "    \n",
     "def proportions_diff_z_stat_ind(n1=None, n2=None, cnt_pos1=None, cnt_pos2=None,\n",
     "                                p1=None, p2=None, sample1=None, sample2=None):\n",
-    "    if sample1 != None:\n",
+    "    if sample1 is not None:\n",
     "        n1 = len(sample1)\n",
     "        cnt_pos1 = sum(sample1)\n",
     "        #подсчет вероятноти для 1-й популяции\n",
     "        p1 = cnt_pos1 / n1\n",
-    "    elif n1 != None and cnt_pos1 != None:\n",
+    "    elif n1 is not None and cnt_pos1 is not None:\n",
     "        p1 = cnt_pos1 / n1\n",
     "    else:\n",
-    "        assert(n1 != None) , 'You give no sample, no cnt_pos1, so it must be p1 and n1'\n",
+    "        assert(n1 is not None) , 'You give no sample, no cnt_pos1, so it must be p1 and n1'\n",
     "        \n",
-    "    if sample2 != None:\n",
+    "    if sample2 is not None:\n",
     "        n2 = len(sample2)\n",
     "        cnt_pos2 = sum(sample2)\n",
     "        #подсчет вероятноти для 2-й популяции\n",
     "        p2 = cnt_pos2 / n2\n",
-    "    elif n2 != None and cnt_pos2 != None:\n",
+    "    elif n2 is not None and cnt_pos2 is not None:\n",
     "        p2 = cnt_pos2 / n2\n",
     "    else:\n",
-    "        assert(n1 != None) , 'You give no sample, no cnt_pos1, so it must be p1 and n1'\n",
+    "        assert(n1 is not None) , 'You give no sample, no cnt_pos1, so it must be p1 and n1'\n",
     "        \n",
     "    P = (p1*n1 + p2*n2) / (n1 + n2)\n",
     "    \n",
@@ -318,25 +327,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.411764705882354 %\n"
+      "4.411764705882354 %\n",
+      "0.37293045872523534\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.37293045872523534"
-      ]
-     },
-     "execution_count": 171,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -347,7 +347,7 @@
     "k_pos1, k_pos2 = 10, 4\n",
     "print(100*abs(k_pos1 / n1 - k_pos2 / n2), '%')\n",
     "z_stat = proportions_diff_z_stat_ind(n1=n1, n2=n2, cnt_pos1=k_pos1, cnt_pos2=k_pos2)\n",
-    "proportions_diff_z_test(z_stat, alternative='greater')"
+    "print(proportions_diff_z_test(z_stat, alternative='greater'))"
    ]
   },
   {
