--- a/4_Statistics/Week3/homework_week3.ipynb
+++ b/4_Statistics/Week3/homework_week3.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "4    Benin   73.5    5.60"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "Births  0.768663  1.000000"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "Births  0.752962  1.000000"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
        "4    North   Blackpool       1609        18"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "0.10900237458678963"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
        "        [243.03402985, 677.96597015]]))"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
      "output_type": "stream",
      "text": [
       "19.90154208981099\n",
-      "1.6306906179153202e-05\n"
+      "nan\n"
      ]
     }
    ],
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -666,13 +666,14 @@
        "0.2412013934500338"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#10\n",
+    "#Корреляция V Крамера\n",
     "stat, *a = stats.chi2_contingency([[197, 111, 33], [382, 685, 331], [110,342,333]])\n",
     "n = np.sum([[197, 111, 33], [382, 685, 331], [110,342,333]])\n",
     "np.sqrt(stat/(n * (min(3,3)-1)))"
